kubernetes/base/network-policies/allow-external-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-traffic
spec:
  podSelector:
    matchLabels:
      app: kubecolors
      resource: backend
      component: color-api
  policyTypes:
    - Ingress
  ingress:
    - {}
